@@ -12,6 +12,7 @@
 	- Added advanced page-browsing tabs to threads
 	- Added notes field to the user VN list
 	- Added vnlists.status filter to /u+/list
+	- Pass VN tag filters by ID rather than name
 
 2.15 - 2010-12-15
 	- Removed expand/collapse from history browser and /u+/posts and switched to
